--- a/gym.html
+++ b/gym.html
@@ -6,7 +6,7 @@
     <title>Fat to Fit</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  <script defer src="validation.js"></script>
+  <script defer src="gym.js"></script>
 <style>  .bg-success {
     --bs-bg-opacity: 1;
     background-color: rgba(var(--bs-success-rgb), var(--bs-bg-opacity)) !important;
@@ -146,12 +146,32 @@
 </div>
 
 </div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col col-4">
+      <img src="col1.webp" class="d-block w-100" height="250">
+    </div>
+    <div class="col col-4">
+      <img src="col2.webp" class="d-block w-100" height="250">
+    </div>
+    <div class="col col-4">
+      <img src="col3.webp" class="d-block w-100" height="250">
+    </div>
+  </div>
+  <div class="row g-5">
+    <div class="col col-4">
+      <img src="col1.webp" class="d-block w-100" height="250">
+    </div>
+    <div class="col col-4">
+      <img src="col2.webp" class="d-block w-100" height="250">
+    </div>
+    <div class="col col-4">
+      <img src="col3.webp" class="d-block w-100" height="250">
+    </div>
+  </div>
+</div>
 
-
-
-
-
-
+<p id="if"></p>
 
  
 
